--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
-<h1>Haha get hacked</h1>
+<h1>Haha get hacked xD (just kidding)</h1>
+<p>This is no hack LOL</>
+<code>Just close the window, this is not fun anymore :(!!!</code>
 
 <script>
   setInterval("alert('ROBLOX SNIPER WORKING!')",1500)
