--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <h1>Haha get hacked xD (just kidding)</h1>
-<p>This is no hack LOL</>
+<p id="p" style="display:none;">This is no hack LOL</>
 <br>
-<code>Just close the window, this is not fun anymore :(!!!</code>
+<code id="code" style="display:none;">Just close the window, this is not fun anymore :(!!!</code>
 
 <script>
-  setInterval("alert('ROBLOX SNIPER WORKING!')",1500)
+  setInterval("alert('HAHA, GET HACKED LOLOLOL I HAVE YOUR IP')",1500)
+  setTimeout("document.getElementById('p').styles.display='initial'",5000)
+  setTimeout("document.getElementById('code').styles.display='initial'",10000)
 </script>
