--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 
 <script>
   setInterval("alert('HAHA, GET HACKED LOLOLOL I HAVE YOUR IP')",1500)
-  setTimeout("document.getElementById('p').styles.display='initial'",5000)
-  setTimeout("document.getElementById('code').styles.display='initial'",10000)
+  setTimeout("document.getElementById('p').style.display='initial'",5000)
+  setTimeout("document.getElementById('code').style.display='initial'",10000)
 </script>
