--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
-<h1>Haha get hacked xD (just kidding)</h1>
+<h1 id="h1">Haha get hacked xD</h1>
 <p id="p" style="display:none;">This is no hack LOL</>
 <br>
 <code id="code" style="display:none;">Just close the window, this is not fun anymore :(!!!</code>
 
 <script>
   setInterval("alert('HAHA, GET HACKED LOLOLOL I HAVE YOUR IP')",1500)
+  setTimeout("document.getElementById('h1').style.innerHTML="Haha get hacked xD (just kidding)"",5000)
   setTimeout("document.getElementById('p').style.display='initial'",5000)
   setTimeout("document.getElementById('code').style.display='initial'",10000)
 </script>
