--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 <script>
   setInterval("alert('HAHA, GET HACKED LOLOLOL I HAVE YOUR IP')",1500)
-  setTimeout("document.getElementById('h1').style.innerHTML='Haha get hacked xD (just kidding)'",5000)
+  setTimeout("document.getElementById('h1').innerHTML='Haha get hacked xD (just kidding)'",5000)
   setTimeout("document.getElementById('p').style.display='initial'",5000)
   setTimeout("document.getElementById('code').style.display='initial'",10000)
 </script>
